--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Elizabeth
-description: Elizabeth is a library to generate dummy data. This library easy to use and very useful when you need to bootstrap a database.
+title: Mimesis
+description: Python library, which helps generate mock data for various purposes. This data can be particularly useful during software development and testing.
 google_analytics: 
 show_downloads: true
 theme: jekyll-theme-minimal
