--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Mimesis
+title: <b>Mimesis</b>
 description: Python library, which helps generate mock data for various purposes. This data can be particularly useful during software development and testing.
 google_analytics: 
 show_downloads: true
